--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.2",
     "boxicons": "^2.1.2",
     "json-server": "^0.17.0",
